--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,65 +1,55 @@
+# File: .github/workflows/android-build.yml
 name: Android APK Build
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
+    name: Build APKs
     runs-on: ubuntu-latest
 
-    env:
-      JAVA_HOME: /usr/lib/jvm/adoptopenjdk-21-hotspot
-      ANDROID_SDK_ROOT: ${{ github.workspace }}/android-sdk
-
     steps:
-      # 1️⃣ Checkout the repo
+      # 1️⃣ Checkout repo
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      # 2️⃣ Set up JDK 21
+      # 2️⃣ Setup JDK 21
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           distribution: temurin
-          java-version: '21'
+          java-version: 21
 
-      # 3️⃣ Set up Android SDK
-      - name: Set up Android SDK
+      # 3️⃣ Setup Android SDK
+      - name: Setup Android SDK
         uses: android-actions/setup-android@v2
         with:
           api-level: 34
           build-tools: 34.0.3
 
-      # 4️⃣ Cache Gradle dependencies
-      - name: Cache Gradle packages
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: gradle-${{ runner.os }}-
-
-      # 5️⃣ Grant executable permissions to Gradle wrapper
+      # 4️⃣ Grant Gradle permissions
       - name: Make gradlew executable
         run: chmod +x ./gradlew
 
-      # 6️⃣ Build Debug APK
+      # 5️⃣ Build Debug APK
       - name: Build Debug APK
         run: ./gradlew clean assembleDebug
+
+      # 6️⃣ Upload Debug APK
+      - name: Upload Debug APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: WorkshopDiagnosticApp-debug.apk
+          path: app/build/outputs/apk/debug/*.apk
 
       # 7️⃣ Build Release APK
       - name: Build Release APK
         run: ./gradlew assembleRelease
 
-      # 8️⃣ Upload APKs as artifacts
-      - name: Upload APKs
-        uses: actions/upload-artifact@v3
-        with:
-          name: WorkshopDiagnosticApp-APKs
-          path: |
-            app/build/outputs/apk/debug/*.apk
-            app/build/outputs/apk/release/*.apk
+      # 8️⃣ Upload Release
