--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,36 +1,8 @@
- HEAD
- 68a4caa (Add GitHub Actions workflow for Android APK build
 name: Android APK Build
 
 on:
   push:
-    branches:
-      - main
-<<<<<<< HEAD
-  pull_request:
-    branches:
-      - main
-
-jobs:
-  build:
-    name: Build APKs
-    runs-on: ubuntu-latest
-
-    steps:
-      # 1️⃣ Checkout repo
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      # 2️⃣ Setup JDK 21
-      - name: Set up JDK 21
-        uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: 21
-
-      # 3️⃣ Setup Android SDK
-      - name: Setup Android SDK
-=======
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -38,50 +10,39 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Set up JDK
-        uses: actions/setup-java@v3
+      - name: Set up Java
+        uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: '21'
+          java-version: 21
 
       - name: Set up Android SDK
->>>>>>> 68a4caa (Add GitHub Actions workflow for Android APK build)
-        uses: android-actions/setup-android@v2
-        with:
-          api-level: 34
-          build-tools: 34.0.3
+        uses: android-actions/setup-android@v3
 
-<<<<<<< HEAD
-      # 4️⃣ Grant Gradle permissions
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
+      - name: Accept licenses
+        run: yes | sdkmanager --licenses
 
-      # 5️⃣ Build Debug APK
+      - name: Install SDK packages
+        run: |
+          sdkmanager \
+            "platform-tools" \
+            "platforms;android-34" \
+            "build-tools;34.0.0"
+
+      - name: Make Gradle executable
+        run: chmod +x gradlew
+
       - name: Build Debug APK
-        run: ./gradlew clean assembleDebug
+        run: ./gradlew assembleDebug
 
-      # 6️⃣ Upload Debug APK
-      - name: Upload Debug APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: WorkshopDiagnosticApp-debug.apk
-          path: app/build/outputs/apk/debug/*.apk
-
-      # 7️⃣ Build Release APK
       - name: Build Release APK
         run: ./gradlew assembleRelease
 
-      # 8️⃣ Upload Release
-=======
-      - name: Build APK
-        run: ./gradlew assembleDebug assembleRelease
-
       - name: Upload APKs
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: apk-outputs
-          path: app/build/outputs/apk/
->>>>>>> 68a4caa (Add GitHub Actions workflow for Android APK build)
+          name: apks
+          path: app/build/outputs/apk/**/*.apk
