--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,49 +1,59 @@
-
-
-name: Android Build
+name: Android APK Build
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:
-
-permissions:
-  contents: read
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
-    name: Build APK
+    name: Build APKs
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout project
+      # 1️⃣ Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+      # 2️⃣ Setup JDK 21
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
         with:
           distribution: temurin
-          java-version: '17'
+          java-version: 21
 
-      - name: Cache Gradle
-        uses: actions/cache@v4
+      # 3️⃣ Setup Android SDK
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v2
         with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            gradle-
+          api-level: 34
+          build-tools: 34.0.3
 
-      - name: Grant execute permission for Gradle wrapper
-        run: chmod +x gradlew
+      # 4️⃣ Grant Gradle permissions
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
 
+      # 5️⃣ Build Debug APK
       - name: Build Debug APK
-        run: ./gradlew assembleDebug
+        run: ./gradlew clean assembleDebug
 
-      - name: Upload APK
+      # 6️⃣ Upload Debug APK
+      - name: Upload Debug APK
         uses: actions/upload-artifact@v4
         with:
-          name: app-debug-apk
-          path: app/build/outputs/apk/debug/app-debug.apk:
+          name: WorkshopDiagnosticApp-debug.apk
+          path: app/build/outputs/apk/debug/*.apk
+
+      # 7️⃣ Build Release APK
+      - name: Build Release APK
+        run: ./gradlew assembleRelease
+
+      # 8️⃣ Upload Release APK
+      - name: Upload Release APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: WorkshopDiagnosticApp-release.apk
+          path: app/build/outputs/apk/release/*.apk
