--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         release {
             keyAlias "workshop"
             keyPassword "workshop123"
-            storeFile file("keystore.jks")
+            storeFile file("../keystore.jks")
             storePassword "workshop123"
         }
     }
@@ -36,4 +36,5 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.appcompat:appcompat:1.6.1'
 }
