--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,7 @@
-buildscript {
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath "com.android.tools.build:gradle:8.3.2"
-    }
+plugins {
+    id 'com.android.tools.build:gradle:8.3.2' apply false
 }
+
 allprojects {
     repositories {
         google()
